apps/pap_app/k8s/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: web-ingressroute
  namespace: demo
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`pap.uncannydev.com`)
      kind: Rule
      services:
        - name: web
          port: 80
          sticky:
            cookie:
              name: srv_id
              httpOnly: true
              sameSite: lax
